<resources>
    <string name="app_name">Fisher</string>
    <string name="relationship">关系</string>
    <string name="name">名字</string>
    <string name="parent">前代</string>
    <string name="child">后代</string>
    <string name="need">所需</string>
    <string name="has_already">已有</string>
    <string name="can_mutation">可变异</string>
    <string name="commit">提交</string>
    <string name="schedule">安排</string>
    <string name="schedule_desc">点击鱼进行标记并调整优先级。</string>
    <string name="schedule_result_desc">每个池子30个格子。</string>
    <string name="schedule_result">安排结果</string>
    <string name="priority">优先级</string>
    <string name="schedule_with_sss">带星座鱼安排</string>
    <string name="update">更新数据</string>
</resources>